syntax = "proto3";

package pb;

import "google/api/annotations.proto";

service Node {
    rpc TxAdd(TxAddRequest) returns(TxAddResponse) {
        option (google.api.http) = {
            post: "/tx/add"
            body: "*"
    };  
    }
   
    rpc BalanceList(BalanceListRequest) returns(BalanceListResponse) {
        option (google.api.http) = {
            get: "/balance/list"
    };  
    }

    rpc BlockList(BlockListRequest) returns(BlockListResponse) {
        option (google.api.http) = {
            get: "/block/list"
    };  
    }

    rpc NodeStatus(NodeStatusRequest) returns(NodeStatusResponse) {
        option (google.api.http) = {
            get: "/node/status"
    };  
    }
}

message TxAddRequest {
    string from = 2;
    string to = 3;
    uint64 value = 4;
}

message TxAddResponse {
    string status = 1;
    string message = 2;
}

message BalanceListRequest {
}

message BalanceListResponse {
    // string hash = 1;
    // map<string, uint64> balances = 2;
    string output = 1;
}

message BlockHeader {
    string hash = 1;
    string parent_hash = 2;
    int64 height = 3;
    repeated string tx_hashes = 4;
    int64 nonce = 5;
    int64 timestamp =6;
}

message Blcok {
    BlockHeader header = 1;
    repeated tx txs = 2;
}

message BlockListRequest {
}

message BlockListResponse {
    int64 height = 3;
    repeated Blcok blcoks = 2;
}

message tx {
    string hash = 1;
    string from = 2;
    string to = 3;
    uint64 value = 4;
    uint64 nonce = 5;
    int64 timestamp = 6;
    string data = 7;
}

message NodeStatusRequest {
}

message NodeStatusResponse {
    // uint64 block_height = 1;
    // string block_latest_hash = 2;
    // repeated tx pending_txs = 3;
   string output= 1;
}
